--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,6 +27,7 @@ jobs:
     name: Run cmake on Windows
     env:
       # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
+      BUILD_TYPE: Release
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
