--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,9 +4,6 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
 jobs:
   # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
   # You can convert this to a matrix build if you need cross-platform coverage.
@@ -19,7 +16,7 @@ jobs:
       - name: configure cmake
         # configure cmake in a 'build' subdirectory. `cmake_build_type` is only required if you are using a single-configuration generator such as make.
         # see https://cmake.org/cmake/help/latest/variable/cmake_build_type.html?highlight=cmake_build_type
-        run: cmake -b ${{github.workspace}}/build
+        run: cmake -B ${{github.workspace}}/build
       - name: build
         # build your program with the given configuration
         run: cmake --build ${{github.workspace}}/build --config ${{env.build_type}}
