--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,4 +19,4 @@ jobs:
         run: cmake -B ${{github.workspace}}/build
       - name: build
         # build your program with the given configuration
-        run: cmake --build ${{github.workspace}}/build --config ${{env.build_type}}
+        run: cmake --build ${{github.workspace}}/build
